EPUO-443: Refactor ServiceAccessService call to be at service level. (#374)